removed cyclic dependencies and clubbed the dependency utils, security and services into module service-providers